翻译25总结至学习的快乐

--- a/我再也不会把孩子送去学校/05.Effect of schooling on the learn drive学校教育对学习内驱力的影响.md
+++ b/我再也不会把孩子送去学校/05.Effect of schooling on the learn drive学校教育对学习内驱力的影响.md
@@ -28,7 +28,7 @@ Some scientists believe that we innately lose our novelty seeking and our [learn
 
 **The main factor that undermines the learn drive with age is the established knowledge**. There are also secondary factors such as (1) declining "attractive power" of the current knowledge and (2) the actual aging of the brain. Aging may result in a decline in neural networks, synaptic pruning, lesser mental energy, etc. Those can be largely prevented with mental hygiene and learning itself. It is possible to retain the [learn drive](https://supermemo.guru/wiki/Learn_drive) and passion for learning till the age of hundred. With healthy lifestyle, it is easier to retain vitality of the brain than it is to retain, for example, the vitality of the motor system.
 
-**随着年龄的增长，削弱学习内驱力的主要因素是已有的知识。**还有一些次要因素，如（1）当前知识的“吸引力”下降，（2）大脑的实际老化。老化可能会导致神经网络的老化、突触削减、精神活力的减少等。这些都可以通过精神保健和学习本身来预防。[学习内驱力](https://supermemo.guru/wiki/Learn_drive)和热情可以一直保持到百岁。在健康的生活方式中，保持大脑的活力比保持运动系统的活力更容易。
+**随着年龄的增长，削弱学习内驱力的主要因素是已掌握的知识。**还有一些次要因素，如（1）当前知识的「吸引力」下降，（2）大脑的实际老化。老化可能会导致神经网络的老化、突触削减、精神活力的减少等。这些都可以通过精神保健和学习本身来预防。[学习内驱力](https://supermemo.guru/wiki/Learn_drive)和热情可以一直保持到百岁。在健康的生活方式中，保持大脑的活力比保持运动系统的活力更容易。
 
 Some of novelty seeking may be part of a developmental program (e.g. baby's taste-seeking stage). However, those programs would not play an essential part of explorations we tend to induce in the young generation in the course of their education.
 
@@ -218,7 +218,7 @@ Instead of noticing a decline in my own learning passions, I observe the reverse
 >
 > As for food tastes, I am not sure how much of that is really programmed into the brain, and how much comes from the same mechanism as knowledge in a conservative brain. After the collapse of the Berlin Wall, I had my first ever chance to taste mussels. I was 28. That's the age when we are supposed to have lost our ability to expand our taste range. When taking in my first nibble, I was pretty sure I would vomit. It felt like torture. I could say to myself a dozen times "*this is just healthy food, many people enjoy it, use your reason, why get emotional...*", it did not help much. I managed to swallow a few pieces and was relieved when my portion was over. However, I did not give up. I tried again. I tried to fit my optimum [push zone](https://supermemo.guru/wiki/Push_zone) that got very narrow. If I tried too hard or too early, I would hate mussels for life. If I tried too late, I would have forgotten what I had learned in my first experience. My second take at mussels was a bit more relaxed. I was able to find some nice tastes in there despite suffering a lot. A few months later, I enjoyed mussels as much as anyone introduced to the food at earlier stages. There was no novelty seeking in that experience. However, my tastes have been reshaped. Today, I love mussels. Delicious! Am I really deprived of novelty seeking in the area of foods? Not entirely, I love experimenting with various spices and spice combinations. My friend ate a scorpion in Thailand yesterday, his happy face made me intrigued. If I was in Thailand...
 >
-> 至于食物的味道，我不确定其中有多少被真正输入大脑，又有多少来自那类似的机制，就如在一个保守的大脑里的知识一般。柏林墙倒塌后，我第一次有机会品尝贻贝。我 28 岁。在那个年纪，我们应该已经失去了扩大自己口味范围的能力。当我吃第一口时，我非常肯定我会呕吐。感觉像是酷刑。我可以对自己说十几次「这只是健康的食物，很多人喜欢它，用你的理智，为什么要变得情绪化……」，这没有多大帮助。我好不容易吞下了几口，吃完后才松了一口气。然而，我没有放弃。我又试了一次。我试图去适应我的最佳推动区，这个推动区变得非常窄。如果我太努力或太早尝试，我将终生憎恨贻贝。如果我尝试得太晚了，我就会忘记我在第一次经历中学到的东西。我第二次吃贻贝时稍微放松了一点。尽管经历了很多痛苦，我还是在那里发现了一些美味。几个月后，我和那些在早期接触到贻贝的人一样喜欢贻贝。那次经历中没有什么新奇的东西。然而，我的口味已经改变了。今天，我喜欢贻贝。美味！我真的被剥夺了在食物方面寻求新奇的能力吗？不完全是，我喜欢尝试各种香料和香料组合。我的朋友昨天在泰国吃了一只蝎子，他快乐的表情引起了我的兴趣。如果我在泰国...
+> 至于食物的味道，我不确定其中有多少被真正输入大脑，又有多少来自那类似的机制，就如在一个保守的大脑里的知识一般。柏林墙倒塌后，我第一次有机会品尝贻贝。我 28 岁。在那个年纪，我们应该已经失去了扩大自己口味范围的能力。当我吃第一口时，我非常肯定我会呕吐。感觉像是酷刑。我可以对自己说十几次「这只是健康的食物，很多人喜欢它，用你的理智，为什么要变得情绪化……」，这没有多大帮助。我好不容易吞下了几口，吃完后才松了一口气。然而，我没有放弃。我又试了一次。我试图去适应我的最佳[推动区](https://supermemo.guru/wiki/Push_zone)，这个推动区变得非常窄。如果我太努力或太早尝试，我将终生憎恨贻贝。如果我尝试得太晚了，我就会忘记我在第一次经历中学到的东西。我第二次吃贻贝时稍微放松了一点。尽管经历了很多痛苦，我还是在那里发现了一些美味。几个月后，我和那些在早期接触到贻贝的人一样喜欢贻贝。那次经历中没有什么新奇的东西。然而，我的口味已经改变了。今天，我喜欢贻贝。美味！我真的被剥夺了在食物方面寻求新奇的能力吗？不完全是，我喜欢尝试各种香料和香料组合。我的朋友昨天在泰国吃了一只蝎子，他快乐的表情引起了我的兴趣。如果我在泰国...
 >
 > As for boredom, my own professional life is subject to the same mechanisms of saturation and boredom.
 >
@@ -250,7 +250,7 @@ The process of building up enthusiasm for learning is easily trainable and easil
 
 ## 5.9 Summary: Changes to the learn drive
 
-## 总结: 改变学习内驱力的因素
+## 总结：改变学习内驱力的因素
 
 - [learn drive](https://supermemo.guru/wiki/Learn_drive) is not subject to aging beyond natural aging of the brain
 - [学习内驱力](https://supermemo.guru/wiki/Learn_drive)不受大脑自然老化的影响
@@ -269,9 +269,9 @@ The process of building up enthusiasm for learning is easily trainable and easil
 - lifelong learning keeps the learn drive vibrant
 - 终身学习使学习内驱力充满活力
 - passive learning at school undermines the [learn drive](https://supermemo.guru/wiki/Learn_drive) and contributes to the dislike of learning
-- 在学校被动学习破坏了[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，导致了对学习的厌恶
+- 在学校被动学习削弱了[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，助长了对学习的厌恶
 - providing children with answers to their own questions can also be suppressive for the [learn drive](https://supermemo.guru/wiki/Learn_drive)
-- 回答孩子他们自己提出的问题的答案也可以抑制[学习内驱力](https://supermemo.guru/wiki/Learn_drive)
+- 回答孩子他们自己提出的问题的答案也可能抑制[学习内驱力](https://supermemo.guru/wiki/Learn_drive)
 - [learn drive](https://supermemo.guru/wiki/Learn_drive) corrections within the optimum [push zone](https://supermemo.guru/wiki/Push_zone) can improve learning and its direction
 - 在最佳[推动区](https://supermemo.guru/wiki/Push_zone)内的学习内驱力修正可以改善学习及其方向
 - [incremental learning](https://supermemo.guru/wiki/Incremental_learning) is the most powerful tool for developing a strong [learn drive](https://supermemo.guru/wiki/Learn_drive)
