--- a/我再也不会把孩子送去学校/06.Learn drive and reward学习内驱力和奖励.md
+++ b/我再也不会把孩子送去学校/06.Learn drive and reward学习内驱力和奖励.md
@@ -92,7 +92,7 @@ Note that the visual stream produced in experiments that prove the [response of 
 
 The above reasoning explains why both low and high entropy sensory signals can be uninteresting. After a degree of processing, a high entropy signal may lose all its noise and deliver a low entropy input to the hippocampus. We then observe the illusion of an "optimum entropy" level at sensory input. We need a new concept, **learntropy**, that will help us accurately determine the attractiveness of the signal. Learntropy needs to take into account the high degree of processing of information before it can activate reward centers in the brain. Learntropy is discussed [later](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learntropy) in this text.
 
-上面的推理解释了为什么低熵和高熵的感觉信号都是无趣的。经过一定程度的处理后，高熵信号可能会失去所有噪声，并向海马体传递低熵输入。然后，我们观察感官输入时「最佳熵」水平的错觉。我们需要一个新的概念，**学习熵**，来帮助我们准确地判断信号的吸引力。学习熵需要考虑信息的高度处理，然后才能激活大脑中的奖励中心。本文稍后将讨论[学习熵](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learntropy)。
+上面的推理解释了为什么低熵和高熵的感觉信号都是无趣的。经过一定程度的处理后，高熵信号可能会失去所有噪声，并向海马体传递低熵输入。然后，我们观察感官输入时「最佳熵」水平的错觉。我们需要一个新的概念，**学习熵**，来帮助我们准确地判断信号的吸引力。学习熵需要考虑信息的高度处理，然后才能激活大脑中的奖励中枢。本文稍后将讨论[学习熵](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learntropy)。
 
 ## 6.5 Speed of information processing
 
@@ -220,7 +220,7 @@ We know that the hippocampus connects directly with the nucleus accumbens (the b
 
 The anticipation would follow the detection of a high [learntropy](https://supermemo.guru/wiki/Learntropy) signal and would result in active pursuit of high value messages. Detecting a message by the hippocampus might then simultaneously send associative learning messages to the neocortex and the reward signal to the pleasure center. That would spell the moment of learning something new!
 
-在预期检测到一个高[学习熵](https://supermemo.guru/wiki/learntropy)信号后，就会产生对高价值信息的积极追求。海马体检测到一条信息后，可能会同时将相关的学习信息发送到大脑皮层，并向快乐中心发送奖励信号。这将意味着学习新东西的时刻！
+在预期检测到一个高[学习熵](https://supermemo.guru/wiki/learntropy)信号后，就会产生对高价值信息的积极追求。海马体检测到一条信息后，可能会同时将相关的学习信息发送到大脑皮层，并向快乐中枢发送奖励信号。这将意味着学习新东西的时刻！
 
 ## 6.9 The wow factor
 
@@ -646,7 +646,7 @@ The whole learn drive is based on seeking effective ways of representing knowled
 
 ### 6.16.5 Reward centers in learning
 
-### 学习中的奖励中心
+### 学习中的奖励中枢
 
 In 2014, researchers reported that the [activity in the nucleus accumbens was increased in the state of "high curiosity"](https://supermemo.guru/wiki/Curiosity_improves_learning). They have also demonstrated what we have always known: this state improved memory performance. In addition, that improved performance spilled onto incidental learning, i.e. learning that would not spark curiosity on its own. This research was widely reported in media with a wrong interpretation: "*curiosity primes the brain for better memory*". For example, Scientific American headlined "*Neuroimaging reveals how the brain’s reward and memory pathways prime inquiring minds for knowledge*". The paper itself suggested the need for *"stimulating curiosity"*.
 
@@ -654,7 +654,7 @@ In 2014, researchers reported that the [activity in the nucleus accumbens was in
 
 As reward centers can be involved in the anticipation of pleasure, we should rather see the results of the research as an indicator that the [learn drive](https://supermemo.guru/wiki/Learn_drive) is associated with pleasure. It is the learn drive that causes learning. It is learning that is pleasurable. The headline should be "*Neuroimaging confirms that efficient learning is pleasurable*". In other words, the sequence is not "drive -> pleasure -> learning", but "drive -> learning -> pleasure".
 
-由于奖励中心可能涉及快乐的预期，我们更应该把研究的结果看作是[学习内驱力](https://supermemo.guru/wiki/Learn_drive)与快乐相关的一个迹象。正是学习内驱力引发了学习。学习才是令人愉快的。标题应该是「神经成像证实有效的学习是令人愉快的」。换句话说，顺序不是「内驱力->快乐->学习」，而是「内驱力->学习->快乐」。
+由于奖励中枢可能涉及快乐的预期，我们更应该把研究的结果看作是[学习内驱力](https://supermemo.guru/wiki/Learn_drive)与快乐相关的一个迹象。正是学习内驱力引发了学习。学习才是令人愉快的。标题应该是「神经成像证实有效的学习是令人愉快的」。换句话说，顺序不是「内驱力->快乐->学习」，而是「内驱力->学习->快乐」。
 
 Instead of speaking of the need to "stimulate curiosity", which should rather speak of the need to "develop the [learn drive](https://supermemo.guru/wiki/Learn_drive)". The key difference is in perceiving stimulation as quick-fix approach that might be used in a classroom as opposed to a long-term process that takes months and years. An advertising campaing may use cheap tricks to stimulate our curiosity, while a lifelong passion is a formula for insatiable and unwaning [learn drive](https://supermemo.guru/wiki/Learn_drive), which is a perfect warranty for unceasing learning.
 
@@ -946,7 +946,7 @@ On the other hand, most of students of this world suffer of no fault of their ow
 - the speed and complexity of information delivery in learning must to tailored to individual needs
 - 学习中信息传授的速度和复杂性必须适合个人需要。
 - the encoding of a new high value associative memory occurs simultaneously with sending a signal to reward centers in the brain
-- 新的高价值联想记忆的编码与发送信号到大脑中的奖励中心同时发生。
+- 新的高价值联想记忆的编码与发送信号到大脑中的奖励中枢同时发生。
 - failed tailoring of information channels in schooling leads to lack of reward
 - 学校教育中信息渠道的调整失败导致缺少奖励
 - learning provides a unique type of sustainable pleasure that may have therapeutic value
