--- a/我再也不会把孩子送去学校/25.Summary总结.md
+++ b/我再也不会把孩子送去学校/25.Summary总结.md
@@ -1,40 +1,75 @@
 # 25 Summary
 
+# 总结
+
 ## Learning
+
+## 学习
 
 ### Learn drive
 
+### 学习内驱力
+
 - [learn drive](https://supermemo.guru/wiki/Learn_drive) is a natural tendency of the brain to seek new information
+- 学习内驱力是大脑寻求新信息的一种自然倾向
 - learn drive activates the reward centers upon detecting novel patterns in memory storage
+- 学习内驱力根据检测记忆存储中的新模式，激活奖励中枢
 - healthy [learn drive](https://supermemo.guru/wiki/Learn_drive) is the basis of good learning
+- 健康的学习内驱力基于好的学习
 - self-directed learning grounds its efficiency in the [learn drive](https://supermemo.guru/wiki/Learn_drive)
+- 自我导向学习的效率建立在学习内驱力上
 - learn drive innate but is trainable
+- 学习内驱力是与生俱来的但是也是可以培养的
 - learn drive is universal
+- 学习内驱力是普遍的
 - learn drive does not need to decline with age, it can be sustained till the end of a healthy lifespan
+- 学习内驱力不随着年龄的增长而衰退，它可以持续到健康的寿命结束
 - learn drive can be suppressed
+- 学习内驱力可以被抑制的
 - established knowledge undermines the learn drive
+- 已掌握的知识会降低学习内驱力
 - compulsory schooling is usually a suppressor of the [learn drive](https://supermemo.guru/wiki/Learn_drive)
+- 强制的学校教育常常是学习内驱力的抑制者
 - providing children with answers to their own questions can also be suppressive for the [learn drive](https://supermemo.guru/wiki/Learn_drive)
+- 回答孩子他们自己提出的问题的答案也可能抑制[学习内驱力](https://supermemo.guru/wiki/Learn_drive)
 - low [learn drive](https://supermemo.guru/wiki/Learn_drive) makes schooling an unpleasant experience for most kids
+- 低学习内驱力使学校教育成为大多数孩子的不愉快经历
 - one of the main goals of any modern education system should be to help [learn drive](https://supermemo.guru/wiki/Learn_drive) flourish
+- 任何现代教育体系的主要目标之一都应该是帮助[学习内驱力](https://supermemo.guru/wiki/Learn_drive)蓬勃发展
 - best enhancer of the learn drive is rich learning
+- 学习内驱力的最佳增强方法是饱满的学习
 - [learn drive](https://supermemo.guru/wiki/Learn_drive) corrections within the optimum [push zone](https://supermemo.guru/wiki/Push_zone) can improve learning and its direction
+- 在最佳[推动区](https://supermemo.guru/wiki/Push_zone)内的学习内驱力修正可以改善学习及其方向
 - there is a positive feedback loop: learning feeds interest, interest feeds learning (see: [Learning history](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning))
+- 这是一个积极的反馈循环：学习产生兴趣，兴趣产生学习（参见：学习历史）
 
 ### Self-directed learning
 
+### 自我导向学习
+
 - self-directed learning is efficient due to amplifying the [learn drive](https://supermemo.guru/wiki/Learn_drive), operating within the [push zone](https://supermemo.guru/wiki/Push_zone), knowledge generalization, knowledge matching, etc.
+- 自我导向学习是一种有效的学习方式，这归因于在增强学习内驱力、在推动区内操作、知识概括、知识匹配等
 - self-directed learning is best achieved in conditions of freedom (e.g. in [democratic schools](https://supermemo.guru/wiki/Democratic_school), in [homeschooling](https://supermemo.guru/wiki/Homeschooling), or in [unschooling](https://supermemo.guru/wiki/Unschooling))
+- 自我导向学习在自由的条件下得到最好的实现（例如在[民主学校](https://supermemo.guru/wiki/Democratic_school)、[在家教育](https://supermemo.guru/wiki/Homeschooling)或[非学校教育](https://supermemo.guru/wiki/Unschooling)中）。
 - self-directed learning leads to faster learning and to richer knowledge
+- 自我导向学习使学习更快，使知识更丰富
 - at societal level, self-learning does not lead to communication breakdown due to convergence of knowledge
+- 在社会层面上，自学不会因为知识的趋同而导致沟通中断
 
 ### Learning reward
 
+### 学习奖励
+
 - pleasure of learning is a highly reliable indicator of the efficiency of learning (as measured by the total of well-structured long-term memories established)
+- 学习的乐趣是衡量学习效率的一个高度可靠的指标（通过建立结构良好的长期记忆的总量来衡量）
 - displeasure of boredom is part of the [learn drive](https://supermemo.guru/wiki/Learn_drive) targeted at maximized learning
+- 厌倦的不快是以最大化学习为目标的学习内驱力的一部分。
 - instilling passions in a class of students is [rarely effective](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)
+- 在课堂上灌输激情很少有效果
 
 ## Creativity
+
+## 创造力
 
 - [Natural creativity cycle](https://supermemo.guru/wiki/Natural_creativity_cycle) can be used to boost creativity and improve problem solving
 - natural creativity cycle helps promote positive thinking and optimistic frame of mind
@@ -48,6 +83,8 @@
 - pranks, rebellions, and disobedience at school are an expression of freedom and may foster better learning
 
 ## Sleep
+
+## 睡眠
 
 For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/Good_sleep,_good_learning,_good_life:_Summary)
 
@@ -67,6 +104,8 @@ For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/
 
 ## Stress
 
+## 压力
+
 - stress is one of chief reasons why schooling is ineffective
 - expanding student freedoms is the best way towards reducing stress at school
 - bullying is one of the main sources of stress at school and may have highly destructive long-term impact on young minds
@@ -75,7 +114,11 @@ For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/
 
 ## School
 
+## 学校
+
 ### Learning
+
+### 学习
 
 - loss of freedom and excess work are a frequent reason for school hate
 - self-directed learning outperforms schooling by an order of magnitude in the efficiency of gaining coherent long-term knowledge (see: [Learning history: school vs. self-directed learning](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning))
@@ -92,6 +135,8 @@ For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/
 
 ### Homework
 
+### 作业
+
 - morning hours are best for homework, yet most kids do homework late in the evening
 - self-directed learning is superior to homework
 - trading school hours for homework will increase the efficiency of learning in a large subset of students
@@ -99,6 +144,8 @@ For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/
 - self-directed learning with a correction within a [push zone](https://supermemo.guru/wiki/Push_zone) is the best form of "homework"
 
 ### Cramming
+
+### 填鸭式
 
 - schooling schedules inevitably lead to cramming
 - cramming is bad for memory, mood, and long-term learning outcomes
