章节名称翻译

--- a/我再也不会把孩子送去学校/04.Learn drive学习内驱力.md
+++ b/我再也不会把孩子送去学校/04.Learn drive学习内驱力.md
@@ -125,7 +125,7 @@ For a good discussion of curiosity theories, see:
 
 ## 4.6 Summary: Learn drive
 
-## 总结：学习内驱力
+## 摘要：学习内驱力
 
 - learn drive is a natural tendency of the brain to seek new information
 - 学习内驱力是大脑寻求新信息的一种自然倾向
