--- a/我再也不会把孩子送去学校/05.Effect of schooling on the learn drive学校教育对学习内驱力的影响.md
+++ b/我再也不会把孩子送去学校/05.Effect of schooling on the learn drive学校教育对学习内驱力的影响.md
@@ -250,7 +250,7 @@ The process of building up enthusiasm for learning is easily trainable and easil
 
 ## 5.9 Summary: Changes to the learn drive
 
-## 总结：改变学习内驱力的因素
+## 摘要：改变学习内驱力的因素
 
 - [learn drive](https://supermemo.guru/wiki/Learn_drive) is not subject to aging beyond natural aging of the brain
 - [学习内驱力](https://supermemo.guru/wiki/Learn_drive)不受大脑自然老化的影响
