--- a/我再也不会把孩子送去学校/06.Learn drive and reward学习内驱力和奖励.md
+++ b/我再也不会把孩子送去学校/06.Learn drive and reward学习内驱力和奖励.md
@@ -925,7 +925,7 @@ On the other hand, most of students of this world suffer of no fault of their ow
 
 ## 6.25 Summary: Pleasure of learning
 
-## 总结：学习的快乐
+## 摘要：学习的快乐
 
 - human brain naturally tunes in to "interesting information" in the environment
 - 人类大脑自然地适应环境中的「有趣的信息」。
