--- a/我再也不会把孩子送去学校/07.Learn drive vs. learned helplessness学习内驱力与习得性无助.md
+++ b/我再也不会把孩子送去学校/07.Learn drive vs. learned helplessness学习内驱力与习得性无助.md
@@ -74,14 +74,14 @@ My writing about learned helplessness may sound a bit dramatic or even depressin
 
 ## 7.7 Summary: School and learn drive
 
-## 总结：学校和学习内驱力
+## 摘要：学校和学习内驱力
 
 - Compulsory schooling suppresses the [learn drive](https://supermemo.guru/wiki/Learn_drive)
 - 义务教育抑制学习内驱力
 - Most kids adapt to the compulsion of schooling via learned helplessness
 - 大多数孩子通过习得性无助来适应学校教育的强迫
 - Classroom focus is maximized by suppression of creativity via learned helplessness
-- 最大限度地集中课堂注意力是以通过习得性无助抑制创造力为代价
+- 最大化课堂注意力是以通过习得性无助抑制创造力为代价
 - Learned helplessness may lead to problems such as depression, obesity, addictions, risk-taking, aggression, bullying, cruelty, etc.
 - 习得性无助可能导致抑郁、肥胖、上瘾、冒险、攻击、欺凌、冷酷等问题
 - As experience shapes the brain, inaction in the wake of learned helplessness, is bound to stunt cognitive abilities of children
