--- a/我再也不会把孩子送去学校/25.Summary摘要.md
+++ b/我再也不会把孩子送去学校/25.Summary摘要.md
@@ -1,6 +1,6 @@
 # 25 Summary
 
-# 总结
+# 摘要
 
 ## Learning
 
@@ -72,15 +72,25 @@
 ## 创造力
 
 - [Natural creativity cycle](https://supermemo.guru/wiki/Natural_creativity_cycle) can be used to boost creativity and improve problem solving
+- 自然创造力周期可以用来激发创造力和提高解决问题的能力。
 - natural creativity cycle helps promote positive thinking and optimistic frame of mind
+- 自然创造力周期有助于促进积极思考和乐观心态。
 - natural creativity cycle is disrupted by schooling, which severely affects learning
+- 学校教育扰乱了自然创造力周期，严重影响了学习。
 - creativity and focus stand in opposition. Both are desirable and vital (see: [ADHD](https://supermemo.guru/wiki/ADHD))
+- 创造力和注意力是对立的。两者都是值得拥有的和至关重要的（参见：ADHD）
 - classroom focus is maximized by suppression of creativity via [learned helplessness](https://supermemo.guru/wiki/Learned_helplessness_vs._learn_drive)
+- 最大化课堂注意力是以通过习得性无助抑制创造力为代价
 - [for most kids, creative processes are largely blocked by teaching, homework, structured activities, and home chores](https://supermemo.guru/wiki/Creativity:_abundant_but_suppressed!)
+- 对于大多数孩子来说，创造性过程在很大程度上被教学、作业、有组织的活动和家务所阻碍
 - homogeneous education based on a curriculum is a stumbling block on the way towards future creative breakthroughs
+- 基于课程的同质教育是未来创新突破的绊脚石。
 - high creativity can easily produce behaviors that can be confused with symptoms of [ADHD](https://supermemo.guru/wiki/ADHD)
+- 高创造力很容易产生与多动症症状相混淆的行为
 - [ADHD](https://supermemo.guru/wiki/ADHD) may correlate with giftedness
+- 多动症可能与天赋有关
 - pranks, rebellions, and disobedience at school are an expression of freedom and may foster better learning
+- 在学校里，恶作剧、反叛和不服从是自由的表现，可以促进更好的学习。
 
 ## Sleep
 
@@ -88,29 +98,49 @@
 
 For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/Good_sleep,_good_learning,_good_life:_Summary)
 
+有关详细总结，请参见：睡眠科学摘要
+
 - all efficient human operation requires strict adherence to the demands of the [circadian cycle](https://supermemo.guru/wiki/Circadian_cycle)
+- 所有有效的人工操作都需要严格遵守昼夜周期的要求
 - efficient learning and creativity requires strict adherence to the demands of the circadian cycle
+- 有效的学习和创造性要求严格遵守昼夜周期的要求
 - in a healthy circadian cycle, [best learning and creativity occur after sleep](https://supermemo.guru/wiki/Natural_creativity_cycle), i.e. in the morning or after a [siesta](https://supermemo.guru/wiki/Siesta)
+- 在健康的生理周期中，最好的学习和创造力发生在睡眠之后，也就是早晨或午睡之后。
 - [sleep deprivation](https://supermemo.guru/wiki/Sleep_deprivation) is one of the main reasons schooling is ineffective
+- 睡眠不足是学校教育效率低下的主要原因之一
 - early school start is one of the main reasons [kids dislike school](https://supermemo.guru/wiki/Why_students_hate_school%3F)
+- 早早开始上学是孩子们不喜欢学校的主要原因之一
 - circadian system and sleep patterns develop slowly over the first year of life (see: [Baby sleep](https://supermemo.guru/wiki/Baby_sleep))
+- 在生命的第一年，昼夜节律和睡眠模式发展缓慢（参见：婴儿睡眠）
 - [co-sleeping](https://supermemo.guru/wiki/Baby_sleep) is a natural way of sleeping and breastfeeding
+- 共眠是一种自然的睡眠和哺乳方式。
 - waking kids in the morning can have consequences that may last a lifetime
+- 在早上叫醒孩子可能会有一辈子的后果
 - kids should sleep when they are sleepy, not when we think they should sleep
+- 孩子们应该在他们想睡觉的时候睡觉，而不是在我们认为他们应该睡觉的时候。
 - [free running sleep](https://supermemo.guru/wiki/Free_running_sleep) is the best form of sleep for children and adults
+- 自由运转睡眠是儿童和成人最好的睡眠形式
 - sleepiness is a defense against [sleep deprivation](https://supermemo.guru/wiki/Sleep_deprivation)
+- 嗜睡是防止睡眠不足的一种防御措施
 - Sleep is not food. You cannot get more in advance and store it for later
+- 睡眠不是食物。你不能提前获得更多，然后再储存起来备用
 - alarm clock is an invention that is bad for health
+- 闹钟是一种有害健康的发明
 
 ## Stress
 
 ## 压力
 
 - stress is one of chief reasons why schooling is ineffective
+- 压力是学校教育失效的主要原因之一
 - expanding student freedoms is the best way towards reducing stress at school
+- 扩大学生的自由是减轻来自学校的压力的最好方法
 - bullying is one of the main sources of stress at school and may have highly destructive long-term impact on young minds
+- 欺凌是学校压力的主要来源之一，可能对青少年的思想产生极具破坏性的长期影响
 - teacher attitudes have a tremendous impact on stress levels at school
+- 教师的态度对来自学校的压力的水平有很大的影响
 - pushing the brain to the limits does not benefit the [evolution of the brain](https://supermemo.guru/wiki/Evolution_of_the_brain)
+- 把大脑推向极限对大脑的进化没有好处
 
 ## School
 
@@ -121,38 +151,61 @@ For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/
 ### 学习
 
 - loss of freedom and excess work are a frequent reason for school hate
+- 失去自由和过度工作是厌恶学校的常见原因
 - self-directed learning outperforms schooling by an order of magnitude in the efficiency of gaining coherent long-term knowledge (see: [Learning history: school vs. self-directed learning](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning))
+- 在获得连贯的长期知识的效率方面，自我导向学习的效果比学校教育要好一个数量级（参见：学习历史：学校vs.自我导向学习）。
 - there is an optimum volume of reading in a learning session that maximized long-term learning outcomes. Teachers who pile up too much, do actual harm to learning itself and, more importantly, to the [love of learning](https://supermemo.guru/wiki/Learn_drive) in the end
+- 在学习过程中，有一个最佳的阅读量可以最大化长期学习成果。教师填塞过多，对学习本身造成了实实在在的伤害，更重要的是，最终伤害了对学习的热爱
 - excess volume and excess speed of learning result in a [leaky vessel approach](https://supermemo.guru/wiki/On_the_superiority_of_a_rat_over_a_schooled_human): new knowledge easily displaces old knowledge via [interference](https://supermemo.guru/wiki/Interference)
+- 过多的学习容量和过快的学习速度导致了一种漏洞百出的方法：新知识很容易通过干扰取代旧知识
 - rigors of schooling may reveal creative personalities as [most disruptive](https://supermemo.guru/wiki/Creativity:_Asset_or_Burden%3F)
+- 严格的学校教育可能透露出创造性人格是最具破坏性的
 - school schedule design stands in mortal conflict with lifestyle conducive for [learning and creativity](https://supermemo.guru/wiki/Natural_creativity_cycle)
+- 学校的课程表设计与有利于学习和创造力的生活方式存在着严重的冲突
 - compulsory schooling suppress the [learn drive](https://supermemo.guru/wiki/Learn_drive) in kids
+- 强制学校教育抑制了孩子的学习内驱力
 - schools can easily produce an illusion of good learning and an illusion of long-term memory
+- 学校很容易产生一种良好学习的错觉和一种长期记忆的错觉。
 - most kids adapt to the [coercion in schooling](https://supermemo.guru/wiki/Coercion_in_learning) via [learned helplessness](https://supermemo.guru/wiki/Learned_helplessness_vs._learn_drive)
+- 大多数孩子通过习得性无助来适应学校教育的强迫。
 - learned helplessness may lead to problems such as depression, obesity, addictions, risk-taking, aggression, bullying, cruelty, etc.
+- 习得性无助可能导致抑郁、肥胖、上瘾、冒险、攻击、欺凌、冷酷等问题
 - as experience shapes the brain, inaction in the wake of learned helplessness is bound to stunt cognitive abilities of children
+- 经验塑造大脑，习得性无助后的不作为，必然会阻碍儿童的认知能力
 - most often mentioned reasons for linking school are: friends, physical education, good grades, and very rarely, actual progress in learning
+- 最常提到的与学校关联的原因是：朋友、体育课、好成绩，而很少有真正的学习进步。
 
 ### Homework
 
 ### 作业
 
 - morning hours are best for homework, yet most kids do homework late in the evening
+- 早晨的时间最适合做作业，而大多数孩子在晚上做作业都很晚
 - self-directed learning is superior to homework
+- 自我导向学习优于家庭作业
 - trading school hours for homework will increase the efficiency of learning in a large subset of students
+- 把在学校的时间换成作业将提高一大部分学生的学习效率
 - homework amplifies the inefficiency of schooling by re-conditioning of the dislike of learning
+- 作业通过重新调节对学习的厌恶而放大了学校教育的低效
 - self-directed learning with a correction within a [push zone](https://supermemo.guru/wiki/Push_zone) is the best form of "homework"
+- 在推动区内的修正的帮助下的自我导向学习是「作业」的最好形式
 
 ### Cramming
 
-### 填鸭式
+### 死记硬背
 
 - schooling schedules inevitably lead to cramming
+- 学校的课程规划不可避免地会导致死记硬背
 - cramming is bad for memory, mood, and long-term learning outcomes
+- 死记硬背不利于记忆、情绪和长期的学习成果
 - schooling conditions the brain to underestimate the value of lasting knowledge and the cost of quality learning
+- 学校教育使大脑低估了持久知识的价值和高质量学习的成本。
 - cramming techniques inspired [incremental reading](https://supermemo.guru/wiki/Incremental_reading), which has nothing to do with cramming
+- 死记硬背技术启发了渐进式阅读，而这与死记硬背毫无关系。
 
 ### Dropping out
+
+### 辍学
 
 - great people can be found among college graduates and among high [school dropouts](https://supermemo.guru/wiki/School_dropouts)
 - genius is incompatible with schooling. This is why there are many high achieving [school dropouts](https://supermemo.guru/wiki/School_dropouts)
