--- a/我再也不会把孩子送去学校/01.Introduction前言.md
+++ b/我再也不会把孩子送去学校/01.Introduction前言.md
@@ -62,11 +62,11 @@ I would like to believe that I care about kids no less than Gray or Holt, but I 
 
 ## 1.5 Executive Summary
 
-## 执行概要
+## 执行摘要
 
 This book is too long. You can best consume it with [incremental reading](https://supermemo.guru/wiki/Incremental_reading). If this is still too much, go to the [summary](https://supermemo.guru/wiki/Summary) and follow the links to things you disagree with. The ultimate summary is that **schooling undermines the brain potential carried by the young generation**. We can do far better. Not 20% better, not 200% better, far more! I include some numbers in the text.
 
-这本书太长了。您可以通过[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)来最好地阅读它。如果这还样是太多，到[总结](https://supermemo.guru/wiki/Summary)这一章，并遵循链接去阅读你不同意的东西。本书最终的结论是，上学削弱了年轻一代的大脑潜能。我们可以做得更好。不是 20% 更好，不是 200% 更好，而是更多！我在文章中涵盖了一些数字。
+这本书太长了。您可以通过[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)来最好地阅读它。如果这还样是太多，到[摘要](https://supermemo.guru/wiki/Summary)这一章，并遵循链接去阅读你不同意的东西。本书最终的结论是，上学削弱了年轻一代的大脑潜能。我们可以做得更好。不是 20% 更好，不是 200% 更好，而是更多！我在文章中涵盖了一些数字。
 
 ## 1.6 Kids are not adults in miniature
 
@@ -74,7 +74,7 @@ This book is too long. You can best consume it with [incremental reading](https:
 
 An important thing to keep in mind when designing a perfect education ecosystem is that a child's brain works according to entirely different rules than an adult's brain. We need to set kids free and never forget that our brains differ, our memories distort the past, and that the kid knows his or her own brain better!
 
-在设计完善的教育生态系统时，必须牢记的重要一点是，儿童大脑的工作原理与成年人的大脑完全不同。我们需要让孩子们自由，永远不要忘记我们的大脑是不同的，我们的记忆扭曲了过去，孩子们更了解自己的大脑!
+在设计完善的教育生态系统时，必须牢记的重要一点是，儿童大脑的工作原理与成年人的大脑完全不同。我们需要让孩子们自由，永远不要忘记我们的大脑是不同的，我们的记忆扭曲了过去，孩子们更了解自己的大脑！
 
 The key to resolving the problem of adults being unable to empathize with kid's brains is the appreciation of the power of the [learn drive](https://supermemo.guru/wiki/Learn_drive) and the importance of the [fundamental law of learning](https://supermemo.guru/wiki/Fundamental_law_of_learning). In simplest terms, it can be shown in strictly scientific terms that [pleasure is an inevitable outcome of efficient learning](https://supermemo.guru/wiki/Pleasure_of_learning).
 
@@ -118,11 +118,11 @@ Early instruction is particularly dangerous. This [book](https://supermemo.guru/
 
 ## 1.10 Futility of cramming
 
-## 徒劳的填鸭式
+## 徒劳的死记硬背
 
 Cram schools are particularly dangerous. Not only they damage the kids. They may also provide fantastic short-term returns that dazzle the educators with a lesser understanding of neuroscience. This is why many ambitious educators marvel about copying Korean or Singaporean success. Having corrected for cultural differences, I suggest they should look at the correlation between academic success and future creative achievement. For example, see Nobel Prize per capita rankings where "lazy" UK ranks high as opposed to the Asian giants. An even more convincing example should come from biographies of great geniuses of the past: scientists, inventors, and discoverers. We need to study their [unschooling](https://supermemo.guru/wiki/Unschooling) to understand the principles that lead to growing giant creative brains! There is little or no [cramming](https://supermemo.guru/wiki/Cramming) on the path to genius.
 
-填鸭式学校尤其危险。他们不仅伤害孩子。他们也可能提供令人惊叹的短期回报，让对神经科学了解较少的教育工作者感到眼花缭乱。这就是为什么许多雄心勃勃的教育家对复制韩国或新加坡的成功感到惊讶。在纠正了文化差异之后，我建议他们应该看看学业成就和未来创造性成就之间的关系。例如，在诺贝尔奖人均排名中，「懒惰」的英国排名高于亚洲巨人。一个更有说服力的例子应该来自过去伟大天才的传记:科学家、发明家和发现者。我们需要研究他们的[非学校教育](https://supermemo.guru/wiki/Unschooling)来理解那些导致巨大的创造性大脑成长的原理！通往天才的道路上几乎没有[填鸭式的学习](https://supermemo.guru/wiki/Cramming)。
+死记硬背式学校尤其危险。他们不仅伤害孩子。他们也可能提供令人惊叹的短期回报，让对神经科学了解较少的教育工作者感到眼花缭乱。这就是为什么许多雄心勃勃的教育家对复制韩国或新加坡的成功感到惊讶。在纠正了文化差异之后，我建议他们应该看看学业成就和未来创造性成就之间的关系。例如，在诺贝尔奖人均排名中，「懒惰」的英国排名高于亚洲巨人。一个更有说服力的例子应该来自过去伟大天才的传记：科学家、发明家和发现者。我们需要研究他们的[非学校教育](https://supermemo.guru/wiki/Unschooling)来理解那些导致巨大的创造性大脑成长的原理！通往天才的道路上几乎没有[死记硬背](https://supermemo.guru/wiki/Cramming)。
 
 ## 1.11 Learning skill impotence
 
@@ -134,7 +134,7 @@ Limited reliance on [self-directed learning](https://supermemo.guru/wiki/Self-di
 
 We have a boatload of evidence: behavioral, neurophysiological, cultural, anecdotal, etc. that **suppressing individual freedoms** at young age negatively affects creative powers later in life. What might be great for a conformist "harmonious" society of [North Korea](https://supermemo.guru/wiki/North_Korea), or rather helpful in a rural community of an impoverished country, may be highly unwelcome in a high-tech society with an appetite for Nobel-winning achievements in science.
 
-我们有大量的证据:行为的、神经生理学的、文化的、轶事的等等，在年轻时**压抑个人自由**会对以后的生活产生负面影响。对于墨守成规的[朝鲜](https://supermemo.guru/wiki/North_Korea)「和谐」社会来说，或者更具体地说，对于一个贫穷国家的农村社区来说，这可能是件好事，但在一个渴望获得诺贝尔奖的科学成就的高科技社会，这可能是极不受欢迎的。
+我们有大量的证据：行为的、神经生理学的、文化的、轶事的等等，在年轻时**压抑个人自由**会对以后的生活产生负面影响。对于墨守成规的[朝鲜](https://supermemo.guru/wiki/North_Korea)「和谐」社会来说，或者更具体地说，对于一个贫穷国家的农村社区来说，这可能是件好事，但在一个渴望获得诺贝尔奖的科学成就的高科技社会，这可能是极不受欢迎的。
 
 We can track a golden nugget of knowledge from its source to a big discovery. From the moment when the nugget meets the brain to the ultimate reward of a breakthrough. The travel of the knowledge through the brain is hindered by restrictions imposed by schooling at all stages. To see how this happens, read: [Why schools fail](https://supermemo.guru/wiki/Why_schools_fail).
 
@@ -150,7 +150,7 @@ We can track a golden nugget of knowledge from its source to a big discovery. Fr
 
 Once we free our own kids to do [free learning](https://supermemo.guru/wiki/Free_learning) we need to free the entire education system. Let all types of schools and ideas thrive (see: [Grand Education Reform](https://supermemo.guru/wiki/Reform)). The incremental and evolutionary school reform process should proceed with an important goal in mind: all brains on the planet should be set free to pursue [free learning](https://supermemo.guru/wiki/Free_learning). After that, barring disaster, only the age of the machines can change the direction of mankind.
 
-一旦我们让自己的孩子[自由学习](https://supermemo.guru/wiki/Free_learning)，我们就需要解放整个教育体系。让所有类型的学校和思想蓬勃发展(参见：[宏大的教育改革](https://supermemo.guru/wiki/Reform))。循序渐进的学校改革进程应该牢记一个重要目标：地球上所有的大脑都应该被解放出来，去追求[自由学习]()。在那之后，除非发生灾难，只有机器时代才能改变人类的方向。
+一旦我们让自己的孩子[自由学习](https://supermemo.guru/wiki/Free_learning)，我们就需要解放整个教育体系。让所有类型的学校和思想蓬勃发展（参见：[宏大的教育改革](https://supermemo.guru/wiki/Reform)）。循序渐进的学校改革进程应该牢记一个重要目标：地球上所有的大脑都应该被解放出来，去追求[自由学习]()。在那之后，除非发生灾难，只有机器时代才能改变人类的方向。
 
 ## 1.13 When school is a blessing
 
@@ -174,15 +174,15 @@ At that side of the spectrum, the school is a suppressant of the best qualities 
 
 Progress in schooling is measured by grades and test scores. [PISA](https://en.wikipedia.org/wiki/Programme_for_International_Student_Assessment) tests are the gold standard for international competition. As grading and test scores are largely based on short-term learning for short-term results, we optimize in a highly harmful direction. We optimize for [cramming](https://supermemo.guru/wiki/Cramming), not for learning. Much less attention is paid to how much kids actually bring out from school. Perfect knowledge of history on the test day may translate to [vestigial knowledge of history on the last day of school](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning).
 
-学校教育的进步是用分数和考试成绩来衡量的。[PISA](https://en.wikipedia.org/wiki/Programme_for_International_Student_Assessment)tests 是国际竞争的黄金标准。由于评分和考试成绩在很大程度上是基于短期学习来获得短期结果的，所以我们的优化方向是非常有害的。我们优化的是[死记硬背](https://supermemo.guru/wiki/Cramming)，而不是学习。很少有人关注孩子们实际从学校里收获了多少。考试当天完善的历史知识很可能转化为[在学校最后一天残存的历史知识](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)。
+学校教育的进步是用分数和考试成绩来衡量的。[PISA](https://en.wikipedia.org/wiki/Programme_for_International_Student_Assessment) 测试是国际竞争的黄金标准。由于评分和考试成绩在很大程度上是基于短期学习来获得短期结果的，所以我们的优化方向是非常有害的。我们优化的是[死记硬背](https://supermemo.guru/wiki/Cramming)，而不是学习。很少有人关注孩子们实际从学校里收获了多少。考试当天完善的历史知识很可能转化为[在学校最后一天残存的历史知识](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)。
 
 If grades and test scores are used in optimization of learning, we arrive at absurd conclusions such as: learning all night is good, evening caffeine is good, [cramming](https://supermemo.guru/wiki/Cramming) is better than learning, [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition) is ineffective, and other equally absurd propositions.
 
-如果把分数和考试成绩用于优化学习，我们会得出一些荒谬的结论，例如:通宵学习很好，晚上喝咖啡很好，[死记硬背](https://supermemo.guru/wiki/Cramming)比学习更好，[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)无效，以及其他同样荒谬的结论。
+如果把分数和考试成绩用于优化学习，我们会得出一些荒谬的结论，例如：通宵学习很好，晚上喝咖啡很好，[死记硬背](https://supermemo.guru/wiki/Cramming)比学习更好，[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)无效，以及其他同样荒谬的结论。
 
 To improve schooling we add more material and raise the bar. This pushes kids in the direction of short-term memory, more [homework](https://supermemo.guru/wiki/Homework), less [sleep](https://supermemo.guru/wiki/Science_of_sleep), less exercise, less [fun](https://supermemo.guru/wiki/Pleasure_of_learning), harder suppression of the [learn drive](https://supermemo.guru/wiki/Learn_drive), greater risk of [depression and behavioral disorders](https://supermemo.guru/wiki/Learned_helplessness_vs._learn_drive). We drive ourselves into a corner! This is a corner of unhappy society!
 
-为了改进学校教育，我们增加了更多的材料，提高了标准。这将孩子推向短期记忆、更多的[家庭作业](https://supermemo.guru/wiki/Homework)、更少的[睡眠](https://supermemo.guru/wiki/Science_of_sleep)、更少的锻炼更、少的[乐趣](https://supermemo.guru/wiki/Pleasure_of_learning)、更努力抑制[学习内驱力](https://supermemo.guru/wiki/Learn_drive)、更大的[抑郁和行为障碍](https://supermemo.guru/wiki/Learned_helplessness_vs._learn_drive)的风险的方向。我们把自己逼到一个角落里！这是不幸社会的一个角落！
+为了改进学校教育，我们增加了更多的材料，提高了标准。这将孩子推向短期记忆、更多的[家庭作业](https://supermemo.guru/wiki/Homework)、更少的[睡眠](https://supermemo.guru/wiki/Science_of_sleep)、更少的锻炼、更少的[乐趣](https://supermemo.guru/wiki/Pleasure_of_learning)、更努力抑制[学习内驱力](https://supermemo.guru/wiki/Learn_drive)、更大的[抑郁和行为障碍](https://supermemo.guru/wiki/Learned_helplessness_vs._learn_drive)的风险的方向。我们把自己逼到一个角落里！这是不幸社会的一个角落！
 
 Adding volume and speed to education to beat the scores is like hoping that adding speed to [speed-reading](https://supermemo.guru/wiki/Speed-reading) will result in better learning. We improve scores at the cost of actual knowledge. Even worse, we improve scores while seriously undermining human creativity and problem-solving capacity.
 
@@ -226,7 +226,7 @@ Plato, Aristotle, and John Locke have been dead for centuries. [John Holt](https
 
 [Danny Greenberg](https://supermemo.guru/wiki/Danny_Greenberg) and [John Taylor Gatto](https://supermemo.guru/wiki/John_Taylor_Gatto) are in their 80s. [Peter Gray](https://supermemo.guru/wiki/Peter_Gray) is in his 70s. [Ken Robinson](https://supermemo.guru/wiki/Ken_Robinson) will be seventy soon. Even the new kid on the block, [Sugata Mitra](https://supermemo.guru/wiki/Sugata_Mitra) is past his mid 60s.
 
-[丹尼·格林伯格](https://supermemo.guru/wiki/Danny_Greenberg)和[约翰·泰勒·盖托](https://supermemo.guru/wiki/John_Taylor_Gatto)都 80 多岁了。[彼得·格雷](https://supermemo.guru/wiki/Peter_Gray) 70 多岁了。[肯·罗宾逊](https://supermemo.guru/wiki/Ken_Robinson)快 70 岁了。即使是领域里新来的孩子，[Sugata Mitra](https://supermemo.guru/wiki/Sugata_Mitra)也已经 60 多岁了。
+[Danny Greenberg](https://supermemo.guru/wiki/Danny_Greenberg) 和[ John Taylor Gatto](https://supermemo.guru/wiki/John_Taylor_Gatto) 都 80 多岁了。[Peter Gray](https://supermemo.guru/wiki/Peter_Gray) 70 多岁了。[Ken Robinson](https://supermemo.guru/wiki/Ken_Robinson) 快 70 岁了。即使是领域里新来的孩子，[Sugata Mitra](https://supermemo.guru/wiki/Sugata_Mitra) 也已经 60 多岁了。
 
 I have struggled now for 3 decades promoting [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition) and [incremental reading](https://supermemo.guru/wiki/Incremental_reading). Spaced repetition is now slowly gaining popularity among students of languages, and in medical sciences. Incremental reading is still in the starting block. Apart from [SuperMemo](https://supermemo.guru/wiki/SuperMemo), only two incremental reading plug-in attempts for Anki have been made. The road ahead is long and winding.
 
@@ -238,7 +238,7 @@ With all those wise brains dead or aging, we still give preference to a form of 
 
 My [book](https://supermemo.guru/wiki/Problem_of_Schooling) will [fail](https://supermemo.guru/wiki/Why_is_it_hard_to_explain_an_effective_education_system%3F). If Nobel-winning [Milton Friedman](https://en.wikipedia.org/wiki/Milton_Friedman) still gets ignored or misunderstood in reference to [school choice](https://supermemo.guru/wiki/School_choice), what are my chances of breaking through the wall of indifference or ignorance? I see some chance in social media and in the power of collective wisdom of homeschoolers, unschoolers, democratic schools, and [free learners](https://supermemo.guru/wiki/Free_learning) across the globe. I see a chance in the rebellious nature of the enslaved youth.
 
-我的[书](https://supermemo.guru/wiki/Problem_of_Schooling)要[失败](https://supermemo.guru/wiki/Why_is_it_hard_to_explain_an_effective_education_system%3F)了。如果诺贝尔奖得主[米尔顿•弗里德曼](https://en.wikipedia.org/wiki/Milton_Friedman)（Milton Friedman）在[择校方面的选择](https://supermemo.guru/wiki/School_choice)仍被忽视或误解，我突破冷漠或无知之墙的机会有多大?我在社交媒体上看到了一些机会，也看到了世界各地的在家学习者、不上学者、民主学校和[自由学习](https://supermemo.guru/wiki/Free_learning)者集体智慧的力量。我从被奴役的年轻人的叛逆本性中看到了机会。
+我的[书](https://supermemo.guru/wiki/Problem_of_Schooling)要[失败](https://supermemo.guru/wiki/Why_is_it_hard_to_explain_an_effective_education_system%3F)了。如果诺贝尔奖得主 [Milton Friedman](https://en.wikipedia.org/wiki/Milton_Friedman) 在[择校方面的选择](https://supermemo.guru/wiki/School_choice)仍被忽视或误解，我突破冷漠或无知之墙的机会有多大?我在社交媒体上看到了一些机会，也看到了世界各地的在家学习者、不上学者、民主学校和[自由学习](https://supermemo.guru/wiki/Free_learning)者集体智慧的力量。我从被奴役的年轻人的叛逆本性中看到了机会。
 
 ## 1.17 Prediction: Death of schooling
 
